# iwg-form-muizz

backend/: .gitignore  requirements.txt
backend/FormDriver/: FormDriver.py  __init__.py  pyproject.toml
backend/form_server/: pyproject.toml
backend/form_server/form_api/: __init__.py  form_data.py
frontend/iwg-form/: index.html  package-lock.json  package.json
frontend/iwg-form/src/: App.css  App.tsx  formcomponents.css  mainpage.css  mainpage.tsx
frontend/iwg-form/src/components/: Form.tsx  checkwithtext.tsx  selectmenu.tsx  spacer.tsx  textfieldlabeled.tsx
frontend/iwg-form/src/components/FormElement/: FormElement.css  FormElement.tsx
frontend/iwg-form/src/components/Spacer/: Spacer.tsx
